# beemaster-bro

./: .gitignore  Dockerfile  README.md  SWARM.md  cluster-beemaster.sh  compose-beemaster-server.yaml  compose-honeypot-server.yaml  docker-compose.yml  install-bro-source.sh  start-server.sh  start-slave.sh  start.sh
.state/: state.bst
clion_example/: CMakeLists.txt  main.cpp
config/etc/: networks.cfg  node.cfg
custom_scripts/: __load__.bro  auto_event.bro  dio_download_complete_log.bro  dio_download_offer_log.bro  dio_ftp_log.bro  dio_incident_log.bro  dio_json_log.bro  dio_log.bro  dio_mysql_command_log.bro  dio_mysql_log.bro  dio_mysql_login_log.bro  dio_smb_bind_log.bro  dio_smb_request_log.bro  dionaea_receiver.bro
multihop_test/: README.md  master.bro  pybroker.py  slave.bro  talker.py
multihop_test/acu_test/: CMakeLists.txt  Makefile  main.cpp
multihop_test/acu_test/cmake/: FindBroker.cmake
scripts_master/: __load__.bro  acu_result.bro  balance.bro  balance_log.bro  beemaster_logwriter.bro  bro_log.bro  bro_master.bro  bro_receiver.bro  dio_blackhole.bro  dio_download_complete.bro  dio_download_complete_log.bro  dio_download_offer.bro  dio_log.bro  dio_login.bro  dio_mysql.bro  dio_mysql_command.bro  dio_mysql_log.bro  dio_mysql_login.bro  dio_smb_request.bro  lattice_result.bro  log.bro  log_balance.bro  portscan_alert.bro
scripts_shared/: beemaster_events.bro  beemaster_log.bro  beemaster_types.bro  beemaster_util.bro  lattice_events.bro  lattice_log.bro  lattice_types.bro
scripts_slave/: __load__.bro  bro_log.bro  bro_slave.bro  dionaea_receiver.bro
